<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preferences">

    <CheckBoxPreference
        android:key="audio_Enabled"
        android:summary="@string/audioEnabled_summary"
        android:title="@string/audioEnabled_title" />
    <CheckBoxPreference
        android:key="UserInterface_BasicMode"
        android:summary="@string/advancedSettings_summary"
        android:title="@string/advancedSettings_title" />
    <CheckBoxPreference
        android:key="Debugger_Enabled"
        android:summary="@string/debuggerEnabled_summary"
        android:title="@string/debuggerEnabled_title" />
    <CheckBoxPreference
        android:key="Debugger_GenerateLogFiles"
        android:summary="@string/GenerateLogFiles_summary"
        android:title="@string/GenerateLogFiles_title" />
    <PreferenceCategory android:title="@string/logging" >
        <Preference
            android:title="@string/project64core"
            android:key="logging_core" />
    </PreferenceCategory>   
 </PreferenceScreen>
