<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cPad"
    android:layout_width="@dimen/inputMapPreferenceButtonSizeX3"
    android:layout_height="@dimen/inputMapPreferenceButtonSizeX3"
    android:focusable="false"
    android:focusableInTouchMode="false" >

    <Button
        android:id="@+id/buttonCU"
        style="@style/btnMappableNoText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_cpad"
        android:drawableTop="@drawable/ic_arrow_u"
        android:text="@string/inputMapActivity_btnCU" />

    <Button
        android:id="@+id/buttonCD"
        style="@style/btnMappableNoText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_cpad"
        android:drawableBottom="@drawable/ic_arrow_d"
        android:text="@string/inputMapActivity_btnCD" />

    <Button
        android:id="@+id/buttonCL"
        style="@style/btnMappableNoText"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_cpad"
        android:drawableLeft="@drawable/ic_arrow_l"
        android:text="@string/inputMapActivity_btnCL"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonCR"
        style="@style/btnMappableNoText"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_cpad"
        android:drawableRight="@drawable/ic_arrow_r"
        android:text="@string/inputMapActivity_btnCR"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonCC"
        style="@style/btnMappable"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/inputMapActivity_btnC"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>