<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aPad"
    android:layout_width="@dimen/inputMapPreferenceButtonSizeX3"
    android:layout_height="@dimen/inputMapPreferenceButtonSizeX3"
    android:background="@drawable/analog_ring"
    android:focusable="false"
    android:focusableInTouchMode="false" >

    <Button
        android:id="@+id/buttonAC"
        style="@style/btnMappable"
        android:layout_width="@dimen/inputMapPreferenceButtonSizeX1_5"
        android:layout_height="@dimen/inputMapPreferenceButtonSizeX1_5"
        android:layout_centerInParent="true"
        android:background="@drawable/analog_ring"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <Button
        android:id="@+id/buttonAU"
        style="@style/btnMappableNoText"
        android:layout_height="@dimen/inputMapPreferenceButtonSizeX1_5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_apad"
        android:drawableTop="@drawable/ic_arrow_u"
        android:text="@string/inputMapActivity_btnAU" />

    <Button
        android:id="@+id/buttonAD"
        style="@style/btnMappableNoText"
        android:layout_height="@dimen/inputMapPreferenceButtonSizeX1_5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_apad"
        android:drawableBottom="@drawable/ic_arrow_d"
        android:text="@string/inputMapActivity_btnAD" />

    <Button
        android:id="@+id/buttonAL"
        style="@style/btnMappableNoText"
        android:layout_width="@dimen/inputMapPreferenceButtonSizeX1_5"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_apad"
        android:drawableLeft="@drawable/ic_arrow_l"
        android:text="@string/inputMapActivity_btnAL"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonAR"
        style="@style/btnMappableNoText"
        android:layout_width="@dimen/inputMapPreferenceButtonSizeX1_5"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_apad"
        android:drawableRight="@drawable/ic_arrow_r"
        android:text="@string/inputMapActivity_btnAR"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>